language/move-lang/tests/move_check/borrows/borrow_local_combo_invalid.exp
error: 

    ┌── tests/move_check/borrows/borrow_local_combo_invalid.move:12:23 ───
    │
 12 │         if (cond) f = &mut s.f else f = &mut other.f;
    │                       -------- It is still being mutably borrowed by this reference
 13 │         let x = &s;
    │                 ^^ Invalid borrow of local 's'
    │

error: 

    ┌── tests/move_check/borrows/borrow_local_combo_invalid.move:20:23 ───
    │
 20 │         if (cond) f = &mut s.f else f = &mut other.f;
    │                       -------- Field 'f' is still being mutably borrowed by this reference
    ·
 23 │         *x;
    │         ^^ Invalid dereference.
    │

error: 

    ┌── tests/move_check/borrows/borrow_local_combo_invalid.move:29:41 ───
    │
 29 │         if (cond) f = &mut s.f else f = &mut s.g;
    │                                         -------- It is still being mutably borrowed by this reference
 30 │         let x = &s;
    │                 ^^ Invalid borrow of local 's'
    │

error: 

    ┌── tests/move_check/borrows/borrow_local_combo_invalid.move:37:23 ───
    │
 37 │         if (cond) x = &mut s else x = other;
    │                       ------ It is still being mutably borrowed by this reference
 38 │         let y = &s;
    │                 ^^ Invalid borrow of local 's'
    │

error: 

    ┌── tests/move_check/borrows/borrow_local_combo_invalid.move:46:23 ───
    │
 46 │         if (cond) x = &mut s else x = other;
    │                       ------ It is still being mutably borrowed by this reference
 47 │         let y = &mut s;
 48 │         *y;
    │         ^^ Invalid dereference.
    │

